# advent-2024

./: Cargo.toml  README.md  new_day.sh
.github/workflows/: rust.yml
src/: collect.rs  euclid.rs  euclid3d.rs  lib.rs  pathfinding.rs  terminal.rs
