[package]
name = "advent-2024"
version = "0.1.0"
authors = ["Michael Diamond"]
edition = "2021"

[dependencies]
ahash = "0.7"
anyhow = "1.0"
bitmaps = "3.1"
fastrand = "1.6"
itertools = "0.10"
lazy-regex = "3.1.0"
lazy_static = "1.4"
num = "0.4"
once_cell = "1.18.0"
range-collections = "0.4.5"
regex = "1"
term_size = "0.3"

[dev-dependencies]
parameterized_test = "0.2"
assert_approx_eq = "1.1"

# https://doc.rust-lang.org/1.29.0/book/first-edition/conditional-compilation.html
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-features-section
[features]
default = []
# If enabled compiles additional output / debugging details
# implicitly enabled in non-release mode.
# See the interactive!() macro in console.rs.
interactive = []
# If enabled records and prints certain timing data
# See the elapsed!() macro in console.rs.
timing = []
